kubernetes/uat2/deploy.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: mari-api-utility-uat2
  labels:
    app: mari-api-utility-uat2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mari-api-utility-uat2
  template:
    metadata:
      labels:
        app: mari-api-utility-uat2
        
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: mari-api-utility-uat2
        image: reghbpr01.dc1.true.th/mari/mari-api/utility:%VERSION%
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: mari-api-utility-uat2
  labels:
    app: mari-api-utility-uat2
spec:
  ports:
  - port: 3001
    protocol: TCP
  selector:
    app: mari-api-utility-uat2
